config("librtmp_config") {
  include_dirs = [ "." ]
}

static_library("librtmp") {
  sources = [
    "amf.c",
    "amf.h",
    "bytes.h",
    "dh.h",
    "dhgroups.h",
    "handshake.h",
    "hashswf.c",
    "http.h",
    "log.c",
    "log.h",
    "parseurl.c",
    "rtmp_sys.h",
    "rtmp.c",
    "rtmp.h",
  ]
  defines = [ "NO_CRYPTO" ]
  cflags = [ "-Wno-deprecated-declarations" ]
  libs = [ "z" ]
  public_configs = [ ":librtmp_config" ]
}
