config("librtmp_config") {
  include_dirs = [ "." ]
  defines = [ "NO_CRYPTO" ]
  cflags = [ "-Wno-deprecated-declarations" ]
}

source_set("librtmp") {
  sources = [
    "amf.c",
    "amf.h",
    "bytes.h",
    "dh.h",
    "dhgroups.h",
    "handshake.h",
    "hashswf.c",
    "http.h",
    "log.c",
    "log.h",
    "parseurl.c",
    "rtmp_sys.h",
    "rtmp.c",
    "rtmp.h",
  ]
  libs = [ "z" ]
  public_configs = [ ":librtmp_config" ]
}
